# krnx

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  bench.py  docker-compose.yml  pyproject.toml  requirements.txt  test_enrichment_v31.py  test_release.py
chillbot/: __init__.py  memory.py
chillbot/api_server/: __init__.py  config.py  deps.py  main.py  schemas.py
chillbot/api_server/docs/: krnx-sdk-docs.html
chillbot/api_server/routes/: __init__.py  advanced.py  basic.py
chillbot/compute/: __init__.py  embeddings.py  queue.py  salience.py  vectors.py  worker.py  worker.py.backup
chillbot/compute/archive/: queue.py  vectors (2).py  vectors.py
chillbot/fabric/: __init__.py  context.py  identity.py  orchestrator.py  retention.py
chillbot/fabric/archive/: orchestrator (2).py  orchestrator.py
chillbot/fabric/enrichment/: __init__.py  cross_encoder.py  features.py  relations.py  retention_v2.py  salience.py  schema.py  structural.py  summary.py
chillbot/kernel/: __init__.py  client.py  connection_pool.py  controller.py  exceptions.py  health.py  ltm.py  models.py  recovery.py  stm.py
chillbot/kernel/archive/: connection_pool.py.backup  controller (10).py  controller (11).py  controller (12).py  controller.py  (+10 more)
chillbot_agent/: README.md  __init__.py  agent.py  assembler.py  benchmark_adapter.py  planner.py  processor.py  router.py
docs/: API_GUIDE.md  krnxlite-docs.html  proof_output_kernel_11.28.2025.txt  soak_report.json
krnx/: __init__.py
prod_test/: __init__.py  config.py
prod_test/adapters/: __init__.py  base.py  krnx_adapter.py
prod_test/evidence/: kernel_testing_report_11.28.2025.md  layer2_testing_report.txt
prod_test/generators/: __init__.py  events.py
prod_test/layer1_kernel/: __init__.py  test_k1_append_only.py  test_k2_hash_chain.py  test_k3_replay_determinism.py  test_k4_timestamp_monotonicity.py  test_k5_stm_ltm_migration.py  test_k6_crash_recovery.py  test_k7_ttl_expiry.py
prod_test/layer2_fabric/: __init__.py  conftest.py  pytest.ini  run_layer2_tests.py  test_f10_relation_determinism.py  test_f1_stream_ordering.py  test_f2_cross_stream.py  test_f3_consumer_groups.py  test_f4_replay.py  test_f5_agent_membership.py  test_f6_concurrent_safety.py  test_f7_backpressure.py  test_f8_f9_enrichment_episodes.py
prod_test/layer3_demos/: README.md  __init__.py  check_locomo.py  check_session.py  conftest.py  d1_results.txt  diagnose_datasets.py  pytest.ini  run_layer3_tests.py  test_d1_locomo.py  test_d2_longmemeval.py  test_d3_d5_temporal.py  test_d6_d10_multiagent.py  test_locomo_agent.py
prod_test/metrics/: __init__.py  collector.py
prod_test/reports/: .gitkeep
results/: benchmark_results.json  benchmark_summary.md
src/krnx/: __init__.py  cli.py  cs_agent.py  demo.py  narrated_demo.py  studio.py  substrate.py
tests/: diagnose_backpressure.py  diagnose_recovery.py  run_e2e_tests.py  soak_report.json  test_e2e_functionality.py  test_e2e_integration.py  test_e2e_soak.py  test_e2e_stress.py  test_krnx.py  test_soak_overnight.py  test_stress.py  test_stress_brutal.py  test_stress_comprehensive.py  test_unit.py
tests/testing/: apply_performance_fixes.py  diagnose.py  diagnostic_test.py  error_diagnostic.py  isolate_pause.py  latency_diagnostic.py  mt_pause_test.py  progressive_test.py  setup.py  stress_test.py  stress_test_final.py  test_cache_fix.py  test_compute.py  test_durability.py  test_e2e.py  test_enrichment.py  test_enrichment_e2e.py  test_enrichment_full.py  test_enrichment_short.py  test_refactor.py  test_soak.py  turbo_benchmark.py
(+19 files in other folders)
