[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krnx"
version = "0.1.0"
description = "Git for ML agent state — record, branch, replay, verify"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ben", email = "ben@chillbot.dev" }
]
keywords = [
    "ai",
    "agents",
    "memory",
    "temporal",
    "llm",
    "machine-learning",
    "debugging",
    "audit",
    "replay",
    "git",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
studio = ["textual>=0.40.0"]
dev = [
    "pytest>=7.0",
    "textual>=0.40.0",
    "textual-dev>=1.0",
]

[project.urls]
Homepage = "https://github.com/chillbot-dev/krnx"
Documentation = "https://chillbot.dev/krnx"
Repository = "https://github.com/chillbot-dev/krnx"

[project.scripts]
krnx = "krnx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/krnx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
